Agrega funcion para limpiar lista de amigos

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                     Sortear amigo
                 </button>
             </div>
+
+            <div>
+                <button id="limpiar" class="button-clear" type="reset" onclick="limpiarLista()" disabled >
+                    Limpliar lista
+                </button>
+            </div>
+
         </section>
     </main>
 
